--- a/mon-app-rick-morty/src/assets/global.css
+++ b/mon-app-rick-morty/src/assets/global.css
@@ -4,24 +4,6 @@ html {
     padding: 0;
     overflow-x: hidden;
 }
-
-.question {
-    text-align: left;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.question h1 {
-    color: #333;
-}
-
-.question ul {
-    margin-top: 20px;
-}
-
-.question li {
-    line-height: 1.6;
+.page-content {
+    margin-bottom: 80px;
 }
